objects/EUR_CRM_SalesRep_Order_Items__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>Sales Rep Order Items (EU)</relationshipLabel>
        <relationshipName>SalesRep_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesRep_Order__c</fullName>
        <label>Sales Rep Order</label>
        <referenceTo>EUR_CRM_SalesRep_Order__c</referenceTo>
        <relationshipLabel>Sales Rep Order Items (EU)</relationshipLabel>
        <relationshipName>SalesRep_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Item</label>
        <referenceTo>EUR_CRM_Stock_Item__c</referenceTo>
        <relationshipLabel>Sales Rep Order Items (EU)</relationshipLabel>
        <relationshipName>Sales_Rep_Order_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Rep Order Item (EU)</label>
    <nameField>
        <displayFormat>SOI-{0000000000}</displayFormat>
        <label>Sales Rep Order Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Order Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_Order_Item</fullName>
        <active>true</active>
        <label>EUR DE Free Goods Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Free_Goods_Order_Item</fullName>
        <active>true</active>
        <label>EUR DK Free Goods Order Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>